# HomeAutomation

./: .gitignore  CMakeLists.txt  README.md
include/: GenerateUUID.h  HomeController.h  Lights.h  Menu.h  SecuritySystem.h  SmartDevice.h  Television.h  Thermostat.h  Vacuum.h
src/: GenerateUUID.cpp  HomeController.cpp  Lights.cpp  Menu.cpp  SecuritySystem.cpp  SmartDevice.cpp  Television.cpp  Thermostat.cpp  Vacuum.cpp  main.cpp
